# mentormind

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CREATE_CLASSES_README.md  Dockerfile  Dockerfile.simple  README.md  api_client.py  architecture.md  backend_server.py  create_classes.py  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  example_usage.py  issue.md  main.py  minimal_backend.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  simple_backend.py  syllabus.md  test_api.py  test_create_classes.py  test_curl.sh  test_integration.py  test_sophisticated_pipeline.py  working_backend.py
.claude/: settings.json
backend/: .dockerignore  Dockerfile  auth.py  celery_app.py  funasr_server.py  migrate_auth_user_ids.py  migrate_db.py  migrate_study_plans.py  monitoring.py  paddleocr_server.py  requirements.txt  server.py  test_10_real_lessons.py  test_1_lesson_smoke.py  test_db.py  test_generate_lessons.py  test_lesson_diag.py  test_results_20260412_135636.json  test_results_20260412_135920.json  test_tts.py  test_tts_standalone.py
docs/: COMPLETE_SYSTEM_INDEX.md  FINAL_IMPLEMENTATION_REPORT.md  README.md  REORGANIZATION_REPORT.md  USING_GUIDE_AND_GAPS.md  _pdf_style.css  ai-testing-feedback-architecture.md  architecture.md  assessment_framework.md  deployment_plans.md  initial_interest.md  pricing_model.md  product-requests-2026-06-02.md  security-hardening-runbook.md  standards.md  syllabus.md  tasks.md  video_generation_problems_analysis.md  (+4 more)
(+603 files in other folders)
